# algae

./: Cargo.toml  LICENSE  Makefile  README.md  README_MACROS.md
.github/workflows/: ci.yml
algae/: Cargo.toml
algae-macros/: Cargo.toml
algae-macros/src/: lib.rs
algae/examples/: advanced.rs  chained_handlers.rs  clean_chaining.rs  console.rs  custom_root_effects.rs  debug.rs  duplicate_root_test.rs  duplicate_root_test.rs.disabled  effect_test.rs  explicit_vs_convenient.rs  minimal.rs  multiple_effects_demo.rs  no_macros.rs  overview.rs  partial_handlers.rs  pure.rs  readme.rs  test_custom_root_effectful.rs  test_effectful_backwards_compatibility.rs  test_effectful_scoping_fix.rs  test_effectful_scoping_simple.rs  test_error_messages.rs  test_manual_default.rs  test_non_default_payload.rs  test_send_across_threads.rs  theory.rs  variable_handler_chain.rs  vec_handler_flattening_demo.rs
algae/src/: lib.rs
algae/tests/: algebraic_laws.rs
